# template-pypackage

./: .pre-commit-config.yaml  README.md  cookiecutter.json
.github/.workflows/: test.yml
.github/workflows/: test.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore.template  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: lint.yml  lint_and_test.yml  python-package.yml
{{cookiecutter.project_slug}}/examples/: demo.py
{{cookiecutter.project_slug}}/scripts/: testcover.sh
