[tool.poetry]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_short_description}}"
version = "{{cookiecutter.version}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
documentation = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: {{cookiecutter.license}} License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: {{cookiecutter.minimal_python_version}}",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^{{cookiecutter.minimal_python_version}}.0"
{% if cookiecutter.type == 'starlette' %}
starlette = "^0.21.0"
{% endif %}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.20"
pytest-cov = "^4"
black = "^22.10"
mypy = "^0.990"
flake8 = "^5.0"
{% if cookiecutter.type == 'starlette' %}
starlette = "^0.21"
uvicorn = "^0.19"
jinja2 = "^3.1"
starception = "^0"
{% endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py{{cookiecutter.minimal_python_version.replace('.', '')}}"]
line_length = 120
extend-exclude = true
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''


[tool.isort]
combine_as_imports = true
include_trailing_comma = true
known_standard_library = "dataclasses,typing_extensions"
known_first_party = "{{cookiecutter.project_slug}}"
known_third_party = ["pkg_resources", "toml"]
known_future_library = "__future__"
line_length = 120
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}"]
omit = ["tests/*", ".venv/*", ".git/*",  "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["{{cookiecutter.project_slug}}", "examples", "tests"]
pretty = true
strict = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
minversion =  "7.2"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [
    "node_modules", "frontend", "storage", "dist", ".git",
    "*/migrations/*", "*/static/*", "docs", ".venv"
]
addopts = "--tb=short -s --no-cov-on-fail"
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
