[tool.poetry]
name = "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_short_description}}"
version = "{{cookiecutter.version}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
documentation = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: {{cookiecutter.license}} License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: {{cookiecutter.minimal_python_version}}",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^{{cookiecutter.minimal_python_version}}.0"
{% if cookiecutter.type == 'starlette' %}
starlette = "*"
{% endif %}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.0"
mypy = "^1"
{% if cookiecutter.type == 'starlette' %}
starlette = "^0.21"
uvicorn = "^0.19"
jinja2 = "^3"
starception = "*"
{% endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}"]
omit = ["tests/*", ".venv/*", ".git/*",  "*/__main__.py", "examples"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.mypy]
files = ["{{cookiecutter.project_slug}}", "examples", "tests"]
pretty = true
strict = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = 'auto'
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [
    "node_modules", "frontend", "storage", "dist", ".git",
    "*/migrations/*", "*/static/*", "docs", ".venv"
]
addopts = "--tb=short -s --no-cov-on-fail"
testpaths = ["tests"]
filterwarnings = []

[tool.ruff]
exclude = [
    ".egg",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
